Главная. Адаптивная структура

--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -2,6 +2,15 @@
   padding:36px 20px 18px;
   text-align: center;
   background: #fff;
+  @media @tablet-widths {
+    padding: 35px 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  @media @desktop-widths {
+    padding: 36px 44px 36px 132px;
+  }
 }
 .footer__hashtag{
   margin: 0 0 35px;
@@ -9,6 +18,15 @@
   font-size:21px;
   font-weight:bold;
   color: #000000;
+  @media @tablet-widths {
+    margin: 0;
+  }
+}
+.social__social{
+  margin:0 0 39px;
+  @media @tablet-widths {
+    margin: 0;
+  }
 }
 .footer__development{
   a{
