--- a/less/blocks/nav-dropdown.less
+++ b/less/blocks/nav-dropdown.less
@@ -1,6 +1,9 @@
 .nav-dropdown {
   width: 100%;
   position: relative;
+  @media @tablet-widths {
+    display: none;
+  }
 }
 
 .nav-dropdown__close {
