--- a/less/blocks/features.less
+++ b/less/blocks/features.less
@@ -5,12 +5,20 @@
   padding:0;
   margin:0;
   list-style: none;
+  @media @tablet-widths {
+    display: flex;
+  }
 }
 .features__item{
   padding-left:50px;
   margin-bottom:13px;
   &:last-child{
     margin-bottom:0;
+  }
+  @media @tablet-widths {
+    padding: 0 40px;
+    width: 33.3%;
+    text-align: center;
   }
 }
 .features__title{
