--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -1,6 +1,42 @@
 .intro{
-  padding:30px 20px 23px;
+  padding:42px 20px 5px;
+  position: relative;
+  @media @tablet-widths {
+    padding:35px 60px 44px;
+  }
+  &:after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left:50%;
+    transform: translateX(-50%);
+    border-style: solid;
+    border-width: 38px 384px 0 384px;
+    border-color: #ffffff transparent transparent transparent;
+    z-index:10;
+    @media @tablet-widths {
+      display: none;
+    }
+  }
 }
 .intro__body{
   text-align: center;
+}
+.intro__title{
+  padding:0 10px;
+  margin-bottom:28px;
+  line-height:26px;
+  text-transform: uppercase;
+  font-size:18px;
+  font-weight:bold;
+  color: #000000;
+  @media @tablet-widths {
+    font-size: 21px;
+  }
+}
+.intro__text{
+  text-transform: uppercase;
+  line-height:26px;
+  font-size:14px;
+  color: #333333;
 }
