--- a/less/blocks/main-img.less
+++ b/less/blocks/main-img.less
@@ -12,39 +12,19 @@
     content: '';
     position: absolute;
     right: 50%;
-    top: 100%;
-    width: 100%;
-    height: 100%;
-    -webkit-transform: rotate(10deg);
-    -moz-transform: rotate(10deg);
-    -ms-transform: rotate(10deg);
-    -o-transform: rotate(10deg);
-    transform: rotate(10deg);
-    -webkit-transform-origin: 100% 100%;
-    -moz-transform-origin: 100% 100%;
-    -ms-transform-origin: 100% 100%;
-    -o-transform-origin: 100% 100%;
-    transform-origin: 100% 100%;
-    background: #fff;
+    bottom: 0;
+    border-style: solid;
+    border-width: 57px 0 0 350px;
+    border-color: transparent transparent transparent #ffffff;
   }
   &:after {
     content: '';
     position: absolute;
     left: 50%;
-    top: 100%;
-    width: 100%;
-    height: 100%;
-    -webkit-transform: rotate(-10deg);
-    -moz-transform: rotate(-10deg);
-    -ms-transform: rotate(-10deg);
-    -o-transform: rotate(-10deg);
-    transform: rotate(-10deg);
-    -webkit-transform-origin: 0 0;
-    -moz-transform-origin: 0 0;
-    -ms-transform-origin: 0 0;
-    -o-transform-origin: 0 0;
-    transform-origin: 0 0;
-    background: #fff;
+    bottom: 0;
+    border-style: solid;
+    border-width: 0 0 57px 350px;
+    border-color: transparent transparent #ffffff transparent;
   }
   &--inner-page{
     padding:50px 20px 58px;
@@ -53,9 +33,38 @@
       max-width: 230px;
     }
   }
+  @media @tablet-widths {
+    padding: 79px 20px 86px;
+  }
+}
+.main-img__triangle{
+  position: absolute;
+  left:0;
+  bottom: 0;
+  width:100%;
+  &:before {
+    content: '';
+    position: absolute;
+    right: 50%;
+    bottom: 0;
+    border-style: solid;
+    border-width: 57px 0 0 600px;
+    border-color: transparent transparent transparent #ffffff;
+  }
+  &:after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    border-style: solid;
+    border-width: 0 0 57px 600px;
+    border-color: transparent transparent #ffffff transparent;
+  }
 }
 
 .main-img__text {
+  margin:0 auto;
+  max-width: 460px;
   text-align: center;
   img {
     max-width: 100%;
