--- a/less/global/fonts.less
+++ b/less/global/fonts.less
@@ -4,8 +4,8 @@
   font-weight: normal;
   src:
     local("PT Sans"),
-    url("/fonts/ptsans.woff") format("woff"),
-    url("/fonts/ptsans.woff2") format("woff2");
+    url("/fonts/ptsans.woff2") format("woff2"),
+    url("/fonts/ptsans.woff") format("woff");
 }
 @font-face {
   font-family: "PT Sans";
@@ -13,6 +13,6 @@
   font-weight: bold;
   src:
     local("PT Sans"),
-    url("/fonts/ptsansbold.woff") format("woff"),
-    url("/fonts/ptsansbold.woff2") format("woff2");
+    url("/fonts/ptsansbold.woff2") format("woff2"),
+    url("/fonts/ptsansbold.woff") format("woff");
 }
