--- a/less/global/layout.less
+++ b/less/global/layout.less
@@ -3,24 +3,15 @@ body{
   margin: 0;
   line-height:normal;
   font-family: "PT Sans", "Arial", sans-serif;
+  background: #f2f2f2;
+}
+.wrapper{
+  margin:0 auto;
+  min-width: 320px;
+  max-width: 1200px;
+  overflow: hidden;
+  background: #fff;
+  box-shadow: 0 5px 15px 0 rgba(0,0,0,0.2);
 }
 .wrap{
-}
-.h1{
-  margin-bottom:19px;
-  text-align: center;
-  text-transform: uppercase;
-  font-size:18px;
-  font-weight:bold;
-  color: #000000;
-  &:first-child{
-    margin-top:0;
-  }
-}
-.middle{
-  padding:28px 0 0;
-}
-.middle__text{
-  padding:0 20px;
-  text-align: center;
 }
