--- a/less/global/fonts.less
+++ b/less/global/fonts.less
@@ -2,17 +2,16 @@
   font-family: "PT Sans";
   font-style: normal;
   font-weight: normal;
-  src:
-    local("PT Sans"),
-    url("/fonts/ptsans.woff2") format("woff2"),
-    url("/fonts/ptsans.woff") format("woff");
+  src: local("PT Sans"),
+  url("/fonts/ptsans.woff2") format("woff2"),
+  url("/fonts/ptsans.woff") format("woff");
 }
+
 @font-face {
   font-family: "PT Sans";
   font-style: normal;
   font-weight: bold;
-  src:
-    local("PT Sans"),
-    url("/fonts/ptsansbold.woff2") format("woff2"),
-    url("/fonts/ptsansbold.woff") format("woff");
+  src: local("PT Sans"),
+  url("/fonts/ptsansbold.woff2") format("woff2"),
+  url("/fonts/ptsansbold.woff") format("woff");
 }
