--- a/less/global/layout.less
+++ b/less/global/layout.less
@@ -1,17 +1,25 @@
-body{
+body {
   padding: 0;
   margin: 0;
-  line-height:normal;
+  line-height: normal;
   font-family: "PT Sans", "Arial", sans-serif;
   background: #f2f2f2;
 }
-.wrapper{
-  margin:0 auto;
+
+.wrapper {
+  margin: 0 auto;
   min-width: 320px;
   max-width: 1200px;
   overflow: hidden;
   background: #fff;
-  box-shadow: 0 5px 15px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.2);
 }
-.wrap{
+
+.wrap {
+}
+
+.desktop-hide {
+  @media @desktop-widths {
+    display: none;
+  }
 }
