верстка без картинок

--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -2,7 +2,10 @@
   padding: 42px 20px 5px;
   position: relative;
   @media @tablet-widths {
-    padding: 35px 60px 44px;
+    padding: 46px 60px 51px;
+  }
+  @media @desktop-widths {
+    padding: 50px 60px 51px;
   }
   &:after {
     content: "";
