--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -10,21 +10,31 @@
   margin: 0 3px;
   display: inline-block;
   vertical-align: top;
-  a {
-    position: relative;
-    display: block;
-    width: 46px;
-    height: 48px;
-    background: #81b3d2;
+}
+
+.social__link {
+  position: relative;
+  display: block;
+  width: 46px;
+  height: 48px;
+  background: #81b3d2;
+  img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+  &:hover {
+    background: #669ec0;
+  }
+  &:active {
+    background: #5496bd;
     img {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      -webkit-transform: translate(-50%, -50%);
-      -moz-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-      -o-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
+      opacity: 0.3;
     }
   }
 }
