--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -1,5 +1,5 @@
 .footer {
-  padding: 36px 20px 18px;
+  padding: 34px 20px 18px;
   text-align: center;
   background: #fff;
   @media @tablet-widths {
@@ -14,7 +14,7 @@
 }
 
 .footer__hashtag {
-  margin: 0 0 35px;
+  margin: 0 0 37px;
   text-transform: uppercase;
   font-size: 21px;
   font-weight: bold;
@@ -24,22 +24,30 @@
   }
 }
 
-.social__social {
-  margin: 0 0 39px;
+.footer__social {
+  margin: 0 0 40px;
   @media @tablet-widths {
     margin: 0;
   }
+  @media @desktop-widths {
+    margin-left: -97px;
+  }
 }
 
-.footer__development {
-  a {
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 14px;
-    color: #000000;
-    img {
-      margin-left: 10px;
-      vertical-align: middle;
-    }
+.footer__development-link {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #000000;
+}
+
+.footer__development-img {
+  margin-left: 10px;
+  vertical-align: middle;
+  .footer__development-link:hover & {
+    fill: #81b3d2
+  }
+  .footer__development-link:active & {
+    fill: #b2b2b2
   }
 }
