--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -1,44 +1,72 @@
-.form{
+.form {
   @media @tablet-widths {
+    margin-top: 69px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
   }
+  @media @desktop-widths {
+    margin-top: 54px;
+  }
 }
-.form__group{
+
+.form__group {
   padding: 19px 20px 23px;
-  border-top:1px solid #e5e5e5;
+  border-top: 1px solid #e5e5e5;
   @media @tablet-widths {
-    padding: 30px 0;
+    margin-bottom: 64px;
+    padding: 0;
     width: 100%;
     border-top: none;
   }
-  &--impression{
+  &--col-2 {
+    @media @tablet-widths {
+      width: 50%;
+      box-sizing: border-box;
+    }
+  }
+  &--left {
+    @media @tablet-widths {
+      padding-right: 36px;
+      align-self: flex-start;
+      border-right: 1px solid #dbdbdb;
+    }
+  }
+  &--right {
+    @media @tablet-widths {
+      padding-left: 57px;
+      align-self: flex-end;
+    }
+    @media @desktop-widths {
+      padding-left: 80px;
+    }
+  }
+  &--order-1 {
     @media @tablet-widths {
       order: -1;
-      width: 41%;
     }
   }
-  &--fio{
+  &--col-1 {
     @media @tablet-widths {
-      width: 41%;
+      margin-bottom: 50px;
     }
+
   }
-  &--btn{
-    padding:23px 20px 40px;
-    border-top:none;
+  &--btn {
+    padding: 23px 20px 40px;
+    border-top: none;
     @media @tablet-widths {
-      padding:23px 0 40px;
+      padding: 23px 0 0;
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
-    .btn{
+    .btn {
       @media @tablet-widths {
         max-width: 50%;
       }
     }
-    .form__note{
+    .form__note {
       display: none;
       @media @tablet-widths {
         display: block;
@@ -46,17 +74,77 @@
     }
   }
 }
-.form__group-title{
+
+.form__group-title {
   margin-bottom: 22px;
   text-align: center;
   text-transform: uppercase;
-  font-size:18px;
-  font-weight:bold;
+  font-size: 18px;
+  font-weight: bold;
   color: #000000;
+  @media @tablet-widths {
+    margin-bottom: 57px;
+    text-align: left;
+    font-size: 21px;
+  }
+  @media @desktop-widths {
+    margin-bottom: 53px;
+  }
+  .form__group--radio & {
+    @media @desktop-widths {
+      padding-left: 80px;
+    }
+  }
+  .form__group--col-1 & {
+    @media @tablet-widths {
+      margin-bottom: 27px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      text-align: center;
+    }
+    @media @desktop-widths {
+      margin-bottom: 44px;
+    }
+    &:before {
+      @media @tablet-widths {
+        content: '';
+        height: 0;
+        width: 123px;
+        display: inline-block;
+        vertical-align: middle;
+        border-bottom: 1px solid #dbdbdb;
+      }
+      @media @desktop-widths {
+        width: 280px;
+      }
+    }
+    &:after {
+      @media @tablet-widths {
+        content: '';
+        height: 0;
+        width: 123px;
+        display: inline-block;
+        vertical-align: middle;
+        border-bottom: 1px solid #dbdbdb;
+      }
+      @media @desktop-widths {
+        width: 280px;
+      }
+    }
+  }
 }
+
 .form__line {
   margin-bottom: 18px;
   position: relative;
+  @media @tablet-widths {
+    margin-bottom: 22px;
+  }
+  @media @desktop-widths {
+    display: flex;
+    align-items: baseline;
+  }
   .form__label {
     margin: 0 0 10px 20px;
     display: block;
@@ -64,15 +152,51 @@
   &--inline {
     display: flex;
     align-items: center;
-    .form__label {
-      margin: 0 10px 0 0;
-    }
-    .form__field-wrap {
-      flex-grow: 1;
+    @media @tablet-widths {
+      margin-bottom: 18px;
     }
   }
   &:last-child {
     margin-bottom: 0;
+  }
+  .form__group-desktop-inline & {
+    @media @desktop-widths {
+      margin-bottom: 0;
+    }
+  }
+  .form__group-checkbox & {
+    @media @tablet-widths {
+      margin-bottom: 31px;
+      padding: 0 28px;
+      display: inline-block;
+      width: 50%;
+      box-sizing: border-box;
+    }
+    @media @desktop-widths {
+      padding: 0;
+      margin-bottom: 0;
+      width: auto;
+    }
+    &:nth-child(1) {
+      @media @tablet-widths {
+        order: 1;
+      }
+    }
+    &:nth-child(2) {
+      @media @tablet-widths {
+        order: 3;
+      }
+    }
+    &:nth-child(3) {
+      @media @tablet-widths {
+        order: 2;
+      }
+    }
+    &:nth-child(4) {
+      @media @tablet-widths {
+        order: 4;
+      }
+    }
   }
 }
 
@@ -81,6 +205,15 @@
   text-transform: uppercase;
   font-size: 14px;
   color: #333333;
+  .form__line--inline & {
+    margin: 0 10px 0 0;
+  }
+  .form__group-desktop-inline & {
+    @media @desktop-widths {
+      margin: 0 15px 0 0;
+      white-space: nowrap;
+    }
+  }
 }
 
 .form__field {
@@ -105,13 +238,65 @@
   &:-ms-input-placeholder {
     color: #000;
   }
+  &:hover {
+    background: #e5e5e5;
+  }
+  &:focus {
+    padding: 0 16px;
+    background: #ffffff;
+    border: 4px solid #e5e5e5;
+  }
+  .form__group-desktop-inline & {
+    @media @desktop-widths {
+      min-width: 316px;
+    }
+  }
+  .form__field-tel & {
+    padding-right: 60px;
+    &:focus {
+      padding-right: 56px;
+    }
+  }
+  .form__field-mail & {
+    padding-right: 60px;
+    &:focus {
+      padding-right: 56px;
+    }
+  }
 }
-.form__textarea{
+
+.form__field-tel {
+  position: relative;
+  &:after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 57px;
+    height: 100%;
+    background: #e6e6e6 url(/img/icon-phone.svg) no-repeat center;
+  }
+}
+
+.form__field-mail {
+  position: relative;
+  &:after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 57px;
+    height: 100%;
+    background: #e6e6e6 url(/img/icon-mail.svg) no-repeat center;
+  }
+}
+
+.form__textarea {
   padding: 20px;
   width: 100%;
   height: 160px;
   box-sizing: border-box;
-  line-height:26px;
+  line-height: 26px;
   font-size: 18px;
   font-weight: bold;
   color: #000000;
@@ -130,15 +315,24 @@
     color: #000;
   }
 }
-.form__field-wrap{
+
+.form__field-wrap {
   @media @tablet-widths {
     position: relative;
   }
+  @media @desktop-widths {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .form__line--inline & {
+    flex-grow: 1;
+  }
 }
-.form__error-text{
-  padding:7px 0 0 20px;
-  line-height:normal;
-  font-size:14px;
+
+.form__error-text {
+  padding: 7px 0 0 20px;
+  line-height: normal;
+  font-size: 14px;
   color: #ff5c5c;
   @media @tablet-widths {
     padding: 0 0 9px;
@@ -147,20 +341,24 @@
     bottom: 100%;
   }
   @media @desktop-widths {
-    padding:0 0 12px 20px;
-    position: absolute;
-    left: 0;
-    bottom: 100%;
+    padding: 0 0 12px 20px;
+    position: relative;
+    left: auto;
+    bottom: auto;
   }
 }
-.form__radio{
+
+.form__radio {
   padding: 16px 0;
   min-height: 56px;
   box-sizing: border-box;
   display: block;
-  input{
+  @media @tablet-widths {
+    padding: 18px 0;
+  }
+  input {
     display: none;
-    &:checked+.form__radio-label:after {
+    &:checked + .form__radio-label:after {
       content: '';
       position: absolute;
       top: 50%;
@@ -173,14 +371,15 @@
     }
   }
 }
-.form__radio-label{
-  padding:0 0 0 77px;
+
+.form__radio-label {
+  padding: 0 0 0 77px;
   position: relative;
   display: block;
-  font-size:18px;
-  font-weight:bold;
+  font-size: 18px;
+  font-weight: bold;
   color: #000000;
-  &:before{
+  &:before {
     content: "";
     position: absolute;
     top: 50%;
@@ -191,17 +390,31 @@
     background: #f2f2f2;
     border-radius: 50%;
   }
+  &:hover {
+    &:before {
+      background: #e5e5e5;
+    }
+  }
+  &:active {
+    &:before {
+      background: #d5d5d5;
+    }
+    &:after {
+      opacity: 0.3;
+    }
+  }
 }
-.form__checkbox{
+
+.form__checkbox {
   padding: 16px 0;
   min-height: 56px;
   box-sizing: border-box;
   display: block;
-  input{
+  input {
     display: none;
-    &:checked+.form__checkbox-label:after {
+    &:checked + .form__checkbox-label:after {
       content: '';
-      margin-top:-2px;
+      margin-top: -2px;
       position: absolute;
       top: 50%;
       left: 17px;
@@ -215,14 +428,15 @@
     }
   }
 }
-.form__checkbox-label{
-  padding:0 0 0 77px;
+
+.form__checkbox-label {
+  padding: 0 0 0 77px;
   position: relative;
   display: block;
-  font-size:18px;
-  font-weight:bold;
+  font-size: 18px;
+  font-weight: bold;
   color: #000000;
-  &:before{
+  &:before {
     content: "";
     position: absolute;
     top: 50%;
@@ -233,48 +447,46 @@
     background: #f2f2f2;
     border-radius: 4px;
   }
+  &:hover {
+    &:before {
+      background: #e5e5e5;
+    }
+  }
+  &:active {
+    &:before {
+      background: #d5d5d5;
+    }
+    &:after {
+      opacity: 0.3;
+    }
+  }
 }
-.form__group-checkbox{
+
+.form__group-checkbox {
   @media @tablet-widths {
-    margin: 0 93px;
+    margin: 0 60px -13px;
+    padding-top: 16px;
+    display: flex;
+    flex-wrap: wrap;
   }
   @media @desktop-widths {
-    margin: 0;
+    margin: 0 0 10px;
+    padding-top: 0;
+    justify-content: space-between;
   }
 }
-.form__note{
+
+.form__note {
   text-transform: uppercase;
-  line-height:normal;
-  font-size:14px;
+  line-height: normal;
+  font-size: 14px;
   color: #333333;
 }
-.form__group-contacts{
+
+.form__group-desktop-inline {
   @media @desktop-widths {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-  }
-  .form__line{
-    @media @desktop-widths {
-      margin-bottom: 0;
-      display: flex;
-      align-items: center;
-    }
-    .form__label{
-      @media @desktop-widths {
-        margin: 0 15px 0 0;
-        white-space: nowrap;
-      }
-    }
-    .form__field-wrap{
-      @media @desktop-widths {
-        flex-grow: 1;
-      }
-    }
-    .form__field{
-      @media @desktop-widths {
-        min-width: 316px;
-      }
-    }
   }
 }
