--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -1,18 +1,25 @@
 .header {
-  height: 56px;
+  padding-bottom: 56px;
   position: relative;
   background: #fff;
   z-index: 10;
   @media @tablet-widths {
+    padding-bottom: 0;
     height: 56px;
   }
 }
 
 .header__logo {
-  margin: auto;
-  align-self: flex-start;
+  position: absolute;
+  bottom: -32px;
+  left: 50%;
+  transform: translateX(-50%);
   @media @tablet-widths {
-    margin: 0;
+    position: absolute;
+    bottom: auto;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
