--- a/less/blocks/middle.less
+++ b/less/blocks/middle.less
@@ -1,10 +1,10 @@
 .middle {
   padding: 38px 0 0;
   @media @tablet-widths {
-    padding: 38px 60px 0;
+    padding: 69px 60px 0;
   }
   @media @desktop-widths {
-    padding: 38px 120px 0;
+    padding: 104px 120px 0;
   }
 }
 
@@ -14,6 +14,12 @@
   text-align: center;
   text-transform: uppercase;
   font-size: 14px;
+  @media @tablet-widths {
+    padding: 10px 108px 3px;
+  }
+  @media @desktop-widths {
+    padding: 10px 260px 3px;
+  }
 }
 
 .middle__h1 {
@@ -26,6 +32,10 @@
   &:first-child {
     margin-top: 0;
   }
+  @media @tablet-widths {
+    margin-bottom: 16px;
+    font-size: 30px;
+  }
 }
 
 .middle__h2 {
@@ -37,5 +47,9 @@
   color: #000000;
   &:first-child {
     margin-top: 0;
+  }
+  @media @tablet-widths {
+    margin-bottom: 16px;
+    font-size: 30px;
   }
 }
