--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -2,6 +2,13 @@
   margin: 32px auto 40px;
   position: relative;
   max-width: 800px;
+  @media @tablet-widths {
+    margin: 72px auto 40px;
+    height: 500px;
+  }
+  @media @desktop-widths {
+    margin-bottom: 84px;
+  }
 }
 
 .video__item {
