--- a/less/blocks/info-item.less
+++ b/less/blocks/info-item.less
@@ -117,6 +117,9 @@
     max-height: 256px;
   }
   img {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
     width: 100%;
   }
   .info-item--reverse & {
