--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -18,7 +18,7 @@
   width: 46px;
   height: 48px;
   background: #81b3d2;
-  img {
+  svg {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -27,13 +27,14 @@
     -ms-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    fill: #fff;
   }
   &:hover {
     background: #669ec0;
   }
   &:active {
     background: #5496bd;
-    img {
+    svg {
       opacity: 0.3;
     }
   }
