--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -1,4 +1,34 @@
 .map {
   height: 350px;
-  background: url("/img/bg-map-desktop@1x.jpg") no-repeat center center;
+  position: relative;
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-image: url("/img/bg-map-mobile@1x.jpg");
+  background-size: 100%;
+  @media (min-resolution: 1.5dppx) {
+    background-image: url("/img/bg-map-mobile@2x.jpg");
+  }
+  @media @tablet-widths {
+    background-image: url("/img/bg-map-tablet@1x.jpg");
+    @media (min-resolution: 1.5dppx) {
+      background-image: url("/img/bg-map-tablet@2x.jpg");
+    }
+  }
+  @media @desktop-widths {
+    background-image: url("/img/bg-map-desktop@1x.jpg");
+    @media (min-resolution: 1.5dppx) {
+      background-image: url("/img/bg-map-desktop@2x.jpg");
+    }
+  }
+  &:after{
+    content: '';
+    width: 27px;
+    height: 27px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background: url("/img/icon-map-marker.svg") no-repeat center;
+    background-size: 100%;
+  }
 }
