--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -11,12 +11,16 @@
   }
 }
 
-.video__item {
-  padding: 0 20px;
-}
-
-.video__video {
-  margin: 0 -20px;
+.video__poster {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  img {
+    width: 100%;
+  }
 }
 
 .video__controls {
@@ -29,7 +33,7 @@
     height: 93px;
     width: 100%;
     position: absolute;
-    bottom: 4px;
+    bottom: 0;
     left: 0;
     background: rgba(0, 0, 0, 0.6);
   }
@@ -67,44 +71,57 @@
   background: #fff;
 }
 
-.video__restart {
-  position: absolute;
-  left: 24px;
-  top: 22px;
-  width: 16px;
-  height: 20px;
-  background: url("/img/icon-video-replay.svg") no-repeat center;
-  background-size: 100%;
-  @media @tablet-widths {
-    top: 35px;
-    left: 35px;
+.video__controls-item {
+  svg {
+    width: 100%;
+    fill: #5c6870;
+    @media @tablet-widths {
+      fill: #fff;
+    }
+    &:hover {
+      fill: #333333;
+      @media @tablet-widths {
+        fill: #fff;
+      }
+    }
+    &:active {
+      fill: #c1c1c1;
+      @media @tablet-widths {
+        fill: #fff;
+      }
+    }
   }
-}
-
-.video__captions {
-  position: absolute;
-  right: 74px;
-  top: 23px;
-  width: 32px;
-  height: 20px;
-  background: url("/img/icon-video-subtitles.svg") no-repeat center;
-  background-size: 100%;
-  @media @tablet-widths {
-    top: 36px;
-    right: 92px;
+  &--restart {
+    position: absolute;
+    left: 24px;
+    top: 22px;
+    width: 16px;
+    height: 20px;
+    @media @tablet-widths {
+      top: 35px;
+      left: 35px;
+    }
   }
-}
-
-.video__fullscreen {
-  position: absolute;
-  right: 23px;
-  top: 23px;
-  width: 20px;
-  height: 20px;
-  background: url("/img/icon-video-fullscreen.svg") no-repeat center;
-  background-size: 100%;
-  @media @tablet-widths {
-    top: 36px;
-    right: 41px;
+  &--captions {
+    position: absolute;
+    right: 74px;
+    top: 23px;
+    width: 32px;
+    height: 20px;
+    @media @tablet-widths {
+      top: 36px;
+      right: 92px;
+    }
+  }
+  &--fullscreen {
+    position: absolute;
+    right: 23px;
+    top: 23px;
+    width: 20px;
+    height: 20px;
+    @media @tablet-widths {
+      top: 36px;
+      right: 41px;
+    }
   }
 }
