--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -43,6 +43,8 @@
 
 .footer__development-img {
   margin-left: 10px;
+  width: 27px;
+  height: 34px;
   vertical-align: middle;
   .footer__development-link:hover & {
     fill: #81b3d2
