--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -221,6 +221,7 @@
   height: 60px;
   width: 100%;
   box-sizing: border-box;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   font-weight: bold;
   color: #000000;
@@ -288,6 +289,7 @@
   box-sizing: border-box;
   line-height: 26px;
   font-size: 18px;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-weight: bold;
   color: #000000;
   background: #f2f2f2;
