--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -74,6 +74,7 @@
 .video__controls-item {
   svg {
     width: 100%;
+    height: 100%;
     fill: #5c6870;
     @media @tablet-widths {
       fill: #fff;
