поправила соцциконки и объеденила все css

--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -14,19 +14,12 @@
 
 .social__link {
   position: relative;
-  display: block;
+  display: table-cell;
+  vertical-align: middle;
   width: 46px;
   height: 48px;
   background: #81b3d2;
   svg {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
     fill: #fff;
   }
   &:hover {
