--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -21,5 +21,11 @@
     left: 50%;
     transform: translateX(-50%);
   }
+  img {
+    @media @desktop-widths {
+      width: 187px;
+      height: 96px;
+    }
+  }
 }
 
