--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -5,7 +5,7 @@
   background-position: center top;
   background-image: url("/img/bg-map-mobile@1x.jpg");
   background-size: 100%;
-  @media (min-resolution: 1.5dppx) {
+  @media (max-width: 767px) and (min-resolution: 1.5dppx) {
     background-image: url("/img/bg-map-mobile@2x.jpg");
   }
   @media @tablet-widths {
