--- a/less/blocks/info-item.less
+++ b/less/blocks/info-item.less
@@ -121,6 +121,7 @@
     top: 50%;
     transform: translateY(-50%);
     width: 100%;
+    height: auto;
   }
   .info-item--reverse & {
     @media @tablet-widths {
