--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -18,7 +18,7 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    background: url("/img/nav-shadow.png") repeat-x bottom;
+    background: url("../img/nav-shadow.png") repeat-x bottom;
     @media @tablet-widths {
       display: none;
     }
@@ -125,7 +125,7 @@
   width: 23px;
   height: 22px;
   position: absolute;
-  background: url("/img/icon-menu.svg") no-repeat center;
+  background: url("../img/icon-menu.svg") no-repeat center;
   background-size: 100%;
   cursor: pointer;
   @media @tablet-widths {
@@ -142,7 +142,7 @@
   top: 1px;
   width: 50px;
   height: 50px;
-  background: url("/img/icon-cross.svg") no-repeat center;
+  background: url("../img/icon-cross.svg") no-repeat center;
   background-size: 23px;
   z-index: 1;
   cursor: pointer;
