--- a/less/blocks/features.less
+++ b/less/blocks/features.less
@@ -37,7 +37,7 @@
       top: -9px;
       width: 37px;
       height: 35px;
-      background: url("/img/icon-house.svg") no-repeat;
+      background: url("../img/icon-house.svg") no-repeat;
       background-size: 100%;
     }
     @media @tablet-widths {
@@ -58,7 +58,7 @@
       top: -11px;
       width: 32px;
       height: 38px;
-      background: url("/img/icon-gift.svg") no-repeat;
+      background: url("../img/icon-gift.svg") no-repeat;
       background-size: 100%;
     }
     @media @tablet-widths {
@@ -80,7 +80,7 @@
       top: -4px;
       width: 38px;
       height: 35px;
-      background: url("/img/icon-burger.svg") no-repeat;
+      background: url("../img/icon-burger.svg") no-repeat;
       background-size: 100%;
     }
     @media @tablet-widths {
