--- a/less/blocks/info-item.less
+++ b/less/blocks/info-item.less
@@ -77,11 +77,13 @@
     content: '—';
     margin-right: 3px;
     display: inline-block;
+    vertical-align: top;
   }
   &:after {
     content: '—';
     margin-left: 1px;
     display: inline-block;
+    vertical-align: top;
   }
 }
 
