--- a/less/blocks/main-img.less
+++ b/less/blocks/main-img.less
@@ -3,24 +3,24 @@
   box-sizing: border-box;
   position: relative;
   background-color: #e4f1fa;
-  background-image: url("/img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center bottom;
   background-size: cover;
   overflow: hidden;
   @media (max-width: 767px) and (min-resolution: 1.5dppx) {
-    background-image: url("/img/bg-back-mobile@2x.jpg");
+    background-image: url("../img/bg-back-mobile@2x.jpg");
   }
   @media @tablet-widths {
-    background-image: url("/img/bg-back-tablet@1x.jpg");
+    background-image: url("../img/bg-back-tablet@1x.jpg");
     @media (min-resolution: 1.5dppx) {
-      background-image: url("/img/bg-back-tablet@2x.jpg");
+      background-image: url("../img/bg-back-tablet@2x.jpg");
     }
   }
   @media @desktop-widths {
-    background-image: url("/img/bg-back-desktop@1x.jpg");
+    background-image: url("../img/bg-back-desktop@1x.jpg");
     @media (min-resolution: 1.5dppx) {
-      background-image: url("/img/bg-back-desktop@2x.jpg");
+      background-image: url("../img/bg-back-desktop@2x.jpg");
     }
   }
   &:before {
