--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -3,21 +3,22 @@
   position: relative;
   background-repeat: no-repeat;
   background-position: center top;
-  background-image: url("/img/bg-map-mobile@1x.jpg");
+  background-color: #c9dda2;
+  background-image: url("../img/bg-map-mobile@1x.jpg");
   background-size: 100%;
   @media (max-width: 767px) and (min-resolution: 1.5dppx) {
-    background-image: url("/img/bg-map-mobile@2x.jpg");
+    background-image: url("../img/bg-map-mobile@2x.jpg");
   }
   @media @tablet-widths {
-    background-image: url("/img/bg-map-tablet@1x.jpg");
+    background-image: url("../img/bg-map-tablet@1x.jpg");
     @media (min-resolution: 1.5dppx) {
-      background-image: url("/img/bg-map-tablet@2x.jpg");
+      background-image: url("../img/bg-map-tablet@2x.jpg");
     }
   }
   @media @desktop-widths {
-    background-image: url("/img/bg-map-desktop@1x.jpg");
+    background-image: url("../img/bg-map-desktop@1x.jpg");
     @media (min-resolution: 1.5dppx) {
-      background-image: url("/img/bg-map-desktop@2x.jpg");
+      background-image: url("../img/bg-map-desktop@2x.jpg");
     }
   }
   &:after{
@@ -28,7 +29,7 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    background: url("/img/icon-map-marker.svg") no-repeat center;
+    background: url("../img/icon-map-marker.svg") no-repeat center;
     background-size: 100%;
   }
 }
