--- a/less/blocks/nav-dropdown.less
+++ b/less/blocks/nav-dropdown.less
@@ -12,7 +12,7 @@
   top: 15px;
   width: 23px;
   height: 23px;
-  background: url("/img/icon-cross.svg") no-repeat center;
+  background: url("../img/icon-cross.svg") no-repeat center;
   background-size: 100%;
   z-index: 1;
 }
